# liskov-substitution-violations-typed-languages

./: README.md  pyproject.toml
cross_language/: README.md
cross_language/csharp/: Feed.cs  Notifier.cs
cross_language/java/: Feed.java  Notifier.java
cross_language/typescript/: feed.ts  notifier.ts
examples/java/: Bag.java  DeliveryFailed.java  FlakyNetworkRuntimeException.java  Notifier.java  SmsNotifier.java
src/accounts/: __init__.py  account.py  token.py
src/contracts/: __init__.py  counter.py  document.py
src/lsp_shapes.egg-info/: PKG-INFO  SOURCES.txt
src/notifications/: __init__.py  feed.py  notifier.py
src/refactored/: __init__.py  accounts.py  counter.py  document.py  feed.py  inbox.py  notifier.py  repository.py  shapes.py  token.py  transport.py
src/repository/: __init__.py  base.py  lenient.py  printer.py
src/shapes/: __init__.py  bounded.py  clamped.py  rounding.py  shape.py
src/transports/: __init__.py  inbox.py  transport.py
tests/: test_accounts.py  test_bounded.py  test_counter.py  test_cross_language.py  test_document.py  test_feed.py  test_inbox.py  test_notifier.py  test_positive.py  test_refactored.py  test_repository.py  test_rounding.py  test_shapes.py  test_transport.py
